// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverviewCard component accpets onClick 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`OverviewCard component removes clickable class when the area is none 1`] = `
<div>
  <div
    class="OverviewCard"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-101 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-104"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverviewCard component renders as a flat card 1`] = `
<div>
  <div
    class="OverviewCard OverviewCard--flat"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        <button
          class="MuiButtonBase-root clickable"
          tabindex="0"
          type="button"
        >
          Heading
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-61 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-64"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverviewCard component renders as a flat card 2`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`OverviewCard component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if clickableArea === body 1`] = `
<div>
  <div
    class="OverviewCard OverviewCard--clickable"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <button
      class="MuiButtonBase-root body"
      tabindex="0"
      type="button"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-121 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-124"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`OverviewCard component renders correctly if hasChildrenWithoutMargin  === true 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text children--without-margin"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-161 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-164"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if imageSize === contain 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <div
      class="header-picture header-picture--contain"
      style="background-image: url(imageSource);"
    />
    <img
      alt="Lorem ipsum"
      class="header-picture Media Media--contain"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-181 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-184"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if imageSource !== string 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <div
      class="header-picture"
    >
      <img />
    </div>
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-201 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-204"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly if moreOptionsAvailable === true 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <h5
        class="MuiTypography-root text Typography MuiTypography-h5"
      />
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-141 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-144"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly with a subtitle 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <div
      class="body"
    >
      <h4
        class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <h5
        class="MuiTypography-root text Typography MuiTypography-h5"
      >
        Subtitle
      </h5>
      <div
        class="children text"
      >
        We do the things
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly with contain image 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <img
      alt="Lorem ipsum"
      class="header-picture Media Media--contain"
      src="path-to-image"
    />
    <div
      class="body"
    >
      <h4
        class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders correctly without optional props 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <div
      class="body"
    >
      <h4
        class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders with a string brandImageSource prop 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <div
      class="header-picture"
      style="background-image: url(path-to-image);"
    />
    <div
      class="body"
    >
      <img
        alt=""
        class="brand-logo brand-logo--negative"
        src="image/source.jpg"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`OverviewCard component renders with deprecated imageSource 1`] = `
<div>
  <button
    class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
    tabindex="0"
    type="button"
  >
    <div
      class="header-picture"
      style="background-image: url(path-to-image);"
    />
    <div
      class="body"
    >
      <svg
        class="brand-logo brand-logo--negative"
        preserveAspectRatio="xMinYMin"
      />
      <h4
        class="MuiTypography-root title Typography MuiTypography-h4"
      >
        Heading
      </h4>
      <div
        class="children text"
      >
        We do the things
      </div>
      <div
        class="footer"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-41 MuiButton-outlined MuiButton-outlinedPrimary"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-44"
          >
            Go to this
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
      </div>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
